[b]Version 0.8.5[/b]:

(2013-05-03)
  * Add the Malay translation, by abuyop (transifex).

(2013-05-02)
 * Compile without USE_FONTCONFIG_OPTIONS in linux to prevent the
   -fontconfig problem when using mplayer2.

(2013-05-01)
 * Add an option to enter url(s) in the playlist.

(2013-04-30)
 * The SkinGUI is now the default gui.
 * If the SkinGUI is selected, a check is done on startup to see if the
   skin theme is installed. If not found, the default gui will be used.
 * New command line option: -skingui

(2013-04-28)
 * The option "Move the window when the video area is dragged" is
   now disabled by default because it has some issues that need to
   be fixed.

(2013-04-24)
 * Connect to opensubtitles.org using xmlrpc instead of using the
   simplexml method, which it seems it's not working well and that causes
   that smplayer couldn't find subtitles. This fixes the problem.

(2013-04-20)
 * Add two new options for Audio -> Stereo mode: Mono and Reverse.

(2013-04-07)
 * The size actions work even the autoresize is set to never.
 * Set the resize method to never as default.


[b]Version 0.8.4[/b]:

(2013-03-15)
 * Change the default value for file and stream cache to 2048.

(2013-03-11)
 * Add the option "Pressing the stop button once resets the time position"
   in preferences -> interface -> seeking.

(2013-03-07)
 * (Testing) Now smplayer checks for updates automatically. 
   On startup it connects to the smplayer web to know if there's a new 
   version available and in that case the user gets a notification.
   The check is only done once per week, and it can be totally disabled
   by setting "enabled=false" in the [update_checker] section in smplayer.ini.

(2013-03-04)
 * Add the checkbox "Move the window when the video area is dragged" 
   in preferences -> interface.

(2013-03-03)
 * Add an option in the help menu to show a first steps guide.

(2013-03-01)
 * (Windows) Fix: now all key shortcuts should work when using the
   floating control.
